created standard-button shared component (+style)

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,1 +1,4 @@
-<h2 class="home">Now you're in home</h2>
+<div class="home">
+    <h2>Now you're in home</h2>
+    <lab-standard-button></lab-standard-button>
+</div>
