--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -1,1 +1,4 @@
-<h2 class="login">Now you're in login</h2>
+<div class="login">
+    <h2>Now you're in login</h2>
+    <lab-standard-button></lab-standard-button>
+</div>
