--- a/src/app/features/login/login.component.scss
+++ b/src/app/features/login/login.component.scss
@@ -1,5 +1,6 @@
 .login {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     height: 85vh;
     align-items: center;
